feat: complete workshops from button or voice
